--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,5 +12,19 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+  legal-tracker:
+    image: muriithike/legal-tracker-portal:v1.0.0
+    ports:
+      - "8081:8007"
+    networks:
+      - springmysql-net
+    environment:
+      - DATASOURCE_HOST=mysqldb:3306
+      - DATASOURCE_USER=root
+      - DATASOURCE_PASSWORD=root
+      - DATASOURCE_DB=legal_tracker_db
+    depends_on:
+      mysqldb:
+        condition: service_healthy
 networks:
    springmysql-net:
